--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -15,7 +15,7 @@ button {
 
 body {
   margin: 0;
-  font-family: Roboto, sans-serif;
+  font-family: Roboto;
   background-color: #ffffff;
   overflow-x:hidden;
 
